changing sizes for mobile view

--- a/data/projects.json
+++ b/data/projects.json
@@ -29,7 +29,7 @@
       "Category": "Web Development",
       "Date": "October 02, 2025",
       "Client": "",
-      "Website": "www.leafbuddy.onrender.com",
+      "Website": "leafbuddy.onrender.com",
       "GitHub": "https://github.com/JunPaynandos/leafbuddy"
     }
   },
@@ -62,8 +62,8 @@
       "Project Name": "Soilution",
       "Category": "Web Development",
       "Date": "December 05, 2025",
-      "Client": "Creative Studio",
-      "Website": "www.soilution.onrender.com",
+      "Client": "",
+      "Website": "soilution.onrender.com",
       "GitHub": "https://github.com/JunPaynandos/soilution"
     }
   },
@@ -116,7 +116,7 @@
     "info": {
       "Project Name": "Moodmeet",
       "Category": "Web Application",
-      "Date": "February 2025",
+      "Date": "December 1, 2025",
       "Client": "",
       "Website": "",
       "GitHub": ""
